# dlog

./: Cargo.toml  build.rs
proto/: log.proto
src/: config.rs  index.rs  lib.rs  record.rs  segment.rs  store.rs
tests/: log.rs  segment.rs
