[package]
name = "dlog"
version = "0.1.0"
authors = ["João Veiga <styluss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prototype"
path = "src/bin/prototype/main.rs"

[[bin]]
name = "protobufftype"
path = "src/bin/protobufftype/main.rs"

[dependencies]
tide = "0.14.0"
async-std = { version = "1.6", features = ["attributes"] }
serde = { version = "1.0.117", features = ["derive"] }
tonic = "0.3.1"
prost = "0.6.1"

[build-dependencies]
tonic-build = {version ="0.3.1", features=["rustfmt", "prost"]}
