[package]
name = "dlog"
version = "0.1.0"
authors = ["João Veiga <styluss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prototype"
path = "src/bin/prototype/main.rs"

[[bin]]
name = "protobufftype"
path = "src/bin/protobufftype/main.rs"

[dependencies]
tide = "0.14.0"
async-std = { version = "1.6", features = ["attributes"] }
serde = { version = "1.0.117", features = ["derive"] }
prost = "0.6.1"
memmap = "0.7.0"
byteorder = "1.3.4"
bytes = "0.6.0"
tracing = {version ="0.1.21", features =["log", "log-always"]}
log = "0.4.11"

[build-dependencies]
prost-build = {version="0.6.1"}

[dev-dependencies]
temp_testdir = "0.2.3"
proptest-derive = "0.2.0"
proptest = "0.10.1"
